# sparql-agent

./: .dockerignore  .env.example  AGENT_2B_COMPLETE.txt  CICD_FILE_STRUCTURE.txt  CICD_IMPLEMENTATION.md  CICD_QUICK_REFERENCE.md  CLI_IMPLEMENTATION_COMPLETE.md  CONNECTIVITY_README.md  CONSOLIDATED_TEST_REPORT.md  DISCOVERY_GENERATOR_README.md  DISCOVERY_GENERATOR_SUMMARY.md  DOCKER.md  DOCKER_CONTAINERIZATION_COMPLETE.md  DOCKER_FILES_INDEX.md  DOCKER_QUICKSTART.md  DOCUMENTATION_SYSTEM_SUMMARY.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.txt  INTERACTIVE_CLI_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART_INTERACTIVE.md  QUICK_START_DISCOVERY.md  README.md  SHEX_IMPLEMENTATION_SUMMARY.md  UNIPROT_IMPLEMENTATION_SUMMARY.md  UNIPROT_INDEX.md  UNIPROT_QUICKSTART.md  UNIPROT_QUICK_REFERENCE.md  UNIPROT_USAGE_EXAMPLES.md  cliff.toml  dbpedia  dbpedia.json  dbpedia_discovery.json  dbpedia_full_discovery.json  dbpedia_schema.json  demo_discovery_generator.py  discovery_query_generator.py  docker-compose.dev.yml  (+15 more)
.github/: codeql-config.yml  dependabot.yml  markdown-link-check-config.json
.github/workflows/: README.md  build.yml  deploy.yml  docker-build-push.yml  docs.yml  security.yml  test.yml
archive/: AGENT_2A_SUMMARY.md  AGENT_4B_DELIVERABLE.md  AGENT_5C_COMPLETE.md  AGENT_6B_SUMMARY.md  CHANGES_SUMMARY.md  DISCOVERY_IMPROVEMENTS.md  FINAL_INTEGRATION_TEST_REPORT.md  INSTALLATION_IMPROVEMENTS.md  INTEGRATION_TEST_REPORT.md  LOGGING_FIX_SUMMARY.md  UV_CHEATSHEET.md  UV_MIGRATION_COMPLETE.md  UV_SETUP.md
archive/debug_files/: debug_prefix.py  debug_shex.py
archive/extra_tests/: stress_test_endpoints.py  test_connectivity.py  test_connectivity_standalone.py  test_discovery_improvements.py  test_endpoint_discovery_comprehensive.py  test_llm_exhaustive.py  test_ontology_search_quality.py  test_owl_parser_integration.py  test_shex_direct.py  test_shex_standalone.py  test_uniprot_endpoint.py  test_validators_standalone.py
docker/: build.sh  dev.sh  entrypoint.sh  healthcheck.sh  run.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: sparql-agent.conf
docs/: CLI_QUICK_REFERENCE.md  CLI_USAGE.md  LOGGING.md  README.md  api.md  architecture.md  batch-processing.md  cli.md  conf.py  configuration.md  connectivity_architecture.txt  contributing.md  deployment.md  index.md  installation.md  mcp.md  quickstart.md  testing.md  troubleshooting.md  web-api.md
docs/best-practices/: performance.md  security.md
docs/tutorials/: tutorial-basic.md  tutorial-federation.md  tutorial-llm.md  tutorial-ontology.md
examples/: cli_examples.sh  connectivity_examples.py  connectivity_quickstart.py  connectivity_reference.txt  shex_usage_examples.py  test_capabilities.py
examples/batch/: QUICK_REFERENCE.md  README.md  endpoints.txt  endpoints.yaml  queries.csv  queries.json  queries.txt  usage_example.py
examples/notebooks/: basic_usage.ipynb
infrastructure/aws/: ecs-fargate.tf
infrastructure/azure/: container-instances.tf
infrastructure/gcp/: cloud-run.tf
infrastructure/kubernetes/: deployment.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: backup.sh  deploy.sh  generate-api-docs.py  health-check.sh  migrate.sh  notify-deployment.sh  rollback.sh  setup-env.sh  update-deployment-status.sh  verify-deployment.sh
src/sparql_agent/: __init__.py
src/sparql_agent/cli/: BATCH_IMPLEMENTATION.md  INTERACTIVE_README.md  __init__.py  batch.py  batch_README.md  batch_examples.md  interactive.py  interactive_example.py  main.py  test_batch.py
src/sparql_agent/config/: IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE.txt  __init__.py  endpoints.yaml  example_usage.py  logging.yaml  ontologies.yaml  prompts.yaml  requirements.txt  settings.py  test_config.py
src/sparql_agent/core/: __init__.py  base.py  exceptions.py  types.py
src/sparql_agent/discovery/: IMPLEMENTATION_SUMMARY.md  README.md  README_statistics.md  STATISTICS_QUICKSTART.md  __init__.py  (+5 more)
tests/: README.md  TESTING.md  __init__.py  conftest.py  test_core.py  test_discovery.py  test_discovery_generator.py  test_execution.py  test_llm.py  test_logging_config.py  test_query.py  test_schema.py  test_shex_parser.py  test_validation_retry.py
tests/data/: README.md  sample_ontology.ttl  sample_queries.sparql
tests/integration/: .github-workflows-example.yml  .gitlab-ci-example.yml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_INVENTORY.md  __init__.py  conftest.py  pytest.ini  run_tests.sh  test_clinvar_integration.py  test_complete_system.py  test_comprehensive_workflow_validation.py  test_e2e_comprehensive_workflows.py  test_endpoint_connectivity_integration.py  test_error_recovery.py  test_federated_queries.py  test_mcp_client_integration.py  test_mcp_server.py  test_nl_to_sparql_workflow.py  test_ols4_comprehensive.py  test_ols4_integration.py  test_ontology_guided_workflow.py  test_rdfportal_integration.py  test_uniprot_integration.py
tests/performance/: COMMANDS.md  README.md  __init__.py  conftest.py  performance_config.yaml  profiling_utils.py  reporting.py  test_comprehensive_performance.py  test_concurrency.py  test_generation_performance.py  test_memory_usage.py  test_parsing_performance.py  test_query_performance.py
tests/security/: test_security_comprehensive.py
tui/: app.py
web/frontend/: .gitignore  COMPONENT_TREE.md  DELIVERABLE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
web_ui/: app.py
web_ui/templates/: index.html
(+182 files in other folders)
